chore: use parchment mc mappings