@@ -1,16 +1,13 @@
 package co.lemee.brokentoolmod;
 
 import com.mojang.logging.LogUtils;
-import net.minecraft.client.multiplayer.ClientLevel;
 import net.minecraft.world.entity.player.Inventory;
 import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
-import net.minecraft.world.level.Level;
 import net.minecraftforge.api.distmarker.Dist;
 import net.minecraftforge.common.MinecraftForge;
 import net.minecraftforge.event.entity.player.PlayerDestroyItemEvent;
 import net.minecraftforge.event.server.ServerStartingEvent;
-import net.minecraftforge.eventbus.api.EventPriority;
 import net.minecraftforge.eventbus.api.IEventBus;
 import net.minecraftforge.eventbus.api.SubscribeEvent;
 import net.minecraftforge.fml.common.Mod;
@@ -22,18 +19,18 @@ import org.slf4j.Logger;
 import java.util.List;
 
 // The value here should match an entry in the META-INF/mods.toml file
-@Mod(BrokenToolMod.MODID)
+@Mod(BrokenToolMod.MOD_ID)
 public class BrokenToolMod
 {
     // Define mod id in a common place for everything to reference
-    public static final String MODID = "brokentoolmod";
+    public static final String MOD_ID = "brokentoolmod";
     // Directly reference a slf4j logger
     private static final Logger LOGGER = LogUtils.getLogger();
 
     public BrokenToolMod(FMLJavaModLoadingContext context) {
         IEventBus modEventBus = context.getModEventBus();
 
-        // Register the commonSetup method for modloading
+        // Register the commonSetup method for mod loading
         modEventBus.addListener(this::commonSetup);
 
         // Register ourselves for server and other game events we are interested in
@@ -42,7 +39,7 @@ public class BrokenToolMod
 
     private void commonSetup(final FMLCommonSetupEvent event)
     {
-        LOGGER.info("Broken Tool SETUP");
+        LOGGER.info("Broken Tool COMMON SETUP");
     }
 
     @SubscribeEvent
@@ -56,8 +53,8 @@ public class BrokenToolMod
         List<ItemStack> sameTools = playerInventory.items.stream().filter(x -> x.getItem().getClass() == brokenItem.getClass()).toList();
         if (!sameTools.isEmpty()) {
             List<ItemStack> sameMaterialTool = sameTools.stream()
-                    .filter(x -> x.getDescriptionId().equals(brokenItem.getDescriptionId())).toList();
-            ItemStack newTool = !sameMaterialTool.isEmpty() ? sameMaterialTool.get(0) : sameTools.get(0);
+                    .filter(x -> x.getItem().getDescriptionId().equals(brokenItem.getDescriptionId())).toList();
+            ItemStack newTool = !sameMaterialTool.isEmpty() ? sameMaterialTool.getFirst() : sameTools.getFirst();
             if (newTool != null) {
                 playerInventory.add(playerInventory.selected, newTool);
                 playerInventory.removeItem(newTool);
@@ -74,7 +71,7 @@ public class BrokenToolMod
     }
 
     // You can use EventBusSubscriber to automatically register all static methods in the class annotated with @SubscribeEvent
-    @Mod.EventBusSubscriber(modid = MODID, bus = Mod.EventBusSubscriber.Bus.MOD, value = Dist.CLIENT)
+    @Mod.EventBusSubscriber(modid = MOD_ID, bus = Mod.EventBusSubscriber.Bus.MOD, value = Dist.CLIENT)
     public static class ClientModEvents
     {
         @SubscribeEvent
